<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2014 AChep@xda <artemchep@gmail.com>
  ~
  ~ This program is free software; you can redistribute it and/or
  ~ modify it under the terms of the GNU General Public License
  ~ as published by the Free Software Foundation; either version 2
  ~ of the License, or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program; if not, write to the Free Software
  ~ Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
  ~ MA  02110-1301, USA.
  -->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name" translatable="false">AcDisplay</string>
    <string name="app_description">AcDisplay is a new way of handling notifications in Android. It will inform you about new notifications by showing a minimal, beautiful screen, allowing you to open them directly from the lock screen. And if you want to see what\'s going on, you can simply take your phone out of your pocket to view all the latest notifications, in a similarly pleasing and minimalistic manner.</string>

    <string name="xposed_description">Helps AcDisplay to integrate deeper into Android.</string>

    <string name="add_action">Add</string>
    <string name="remove_action">Remove</string>

    <!-- App widget -->
    <string name="widget_toggle_enabled">Enabled</string>
    <string name="widget_toggle_disabled">Disabled</string>

    <!-- Test notification -->
    <string name="test_action">Send test notification</string>
    <string name="test_notification_message">This is a sample notification.</string>
    <string name="test_notification_message_large">Swipe down to dismiss notification.\nSwipe anywhere to unlock.</string>

    <!-- Initial notification -->
    <string name="init_notification_text">Just dismiss this notification.</string>

    <!-- Remote actions -->
    <string name="remote_enable_acdisplay">AcDisplay is enabled.</string>
    <string name="remote_disable_acdisplay">AcDisplay is disabled.</string>

    <!-- Foreground service that may contain both Keyguard and Active mode. -->
    <string name="service_bath">AcDisplay services</string>
    <string name="service_bath_keyguard">Lockscreen</string>
    <string name="service_bath_active_mode">Active mode</string>

    <!-- Example: Mon, 7 April -->
    <string name="status_date_format">EEE, d MMMM</string>

    <!--
        Device admin / notification access
         -->

    <string name="access_not_granted">Access isn\'t granted!</string>
    <string name="access_notifications_grant_btn">Notifications</string>
    <!-- Shows as a toast, when clicking a button failed. -->
    <string name="access_notifications_grant_manually">Go to Settings > Security > Notification access and check AcDisplay on.</string>
    <string name="access_device_admin_title" translatable="false">@string/app_name</string>
    <string name="access_device_admin_description">This is needed to manage the screen timeout policy.</string>
    <string name="access_device_admin_grant_btn">Turn screen off</string>
    <!-- Shows as a toast, when clicking a button failed. -->
    <string name="access_device_admin_grant_manually">Go to Settings > Security > Device admins and check AcDisplay on.</string>
    <string name="access_device_admin_removed_successful">AcDisplay has been removed from Device admins.</string>
    <string name="app_auto_disabled">AcDisplay has been turned off because it\'s missing admin rights.</string>

    <!-- Pressing button goes to previous track. -->
    <string name="media_prev_description">Previous track button</string>
    <!-- Pressing button goes to next track. -->
    <string name="media_next_description">Next track button</string>
    <!-- Pressing button pauses playback -->
    <string name="media_pause_description">Pause button</string>
    <!-- Pressing button pauses playback -->
    <string name="media_play_description">Play button</string>
    <!-- Pressing button pauses playback -->
    <string name="media_stop_description">Stop button</string>

    <!-- Glyph to be overlaid atop the battery when the level is extremely low. -->
    <string name="batterymeter_very_low_overlay_symbol" translatable="false">!</string>
    <string name="batterymeter_precise" translatable="false"><xliff:g id="number" example="100">%d</xliff:g>%%</string>
    <!-- Content description of the battery level icon for accessibility (not shown on the screen). [CHAR LIMIT=NONE] -->
    <string name="accessibility_battery_level">Battery <xliff:g id="number" example="100">%d</xliff:g> percent.</string>

</resources>