<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2014 AChep@xda <artemchep@gmail.com>
  ~
  ~ This program is free software; you can redistribute it and/or
  ~ modify it under the terms of the GNU General Public License
  ~ as published by the Free Software Foundation; either version 2
  ~ of the License, or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program; if not, write to the Free Software
  ~ Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
  ~ MA  02110-1301, USA.
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/holo_red_dark"
    android:divider="?android:dividerHorizontal"
    android:showDividers="middle"
    android:orientation="vertical"
    tools:ignore="Overdraw">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:gravity="center_horizontal"
        android:text="@string/access_not_granted"
        android:textAppearance="?android:textAppearanceLarge"
        android:fontFamily="sans-serif-condensed"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="?android:dividerVertical"
        android:measureWithLargestChild="true"
        android:showDividers="middle"
        android:baselineAligned="false">

        <Button
            android:id="@+id/access_notification"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/stat_notify"
            android:drawablePadding="4dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:text="@string/access_notifications_grant_btn"
            style="@android:style/Widget.Holo.Button.Borderless.Small" />

        <Button
            android:id="@+id/access_device_admin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/stat_lock"
            android:drawablePadding="4dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:text="@string/access_device_admin_grant_btn"
            style="@android:style/Widget.Holo.Button.Borderless.Small" />
    </LinearLayout>
</LinearLayout>
